--- a/_publications/2021_ACS.md
+++ b/_publications/2021_ACS.md
@@ -9,7 +9,7 @@ paperurl: 'https://pubs.acs.org/doi/10.1021/acs.chemmater.1c00420'
 citation: 'Xia, X. (2021). &quot;Hydrothermal Synthesis and Solid-State Laser Refrigeration of Ytterbium-Doped Potassium Lutetium Fluoride (KLF) Microcrystals.&quot; <i>Chem Mater</i>. 33(12).'
 ---
 <p align="center">
-  <img src="https://xiaojing-xia.github.io/academic/images/TOC_AdvMat_2021.jpeg?raw=true" alt="Photo" style="width: 500px;"/> 
+  <img src="https://xiaojing-xia.github.io/academic/images/TOC_ACS_2021.png?raw=true" alt="Photo" style="width: 500px;"/> 
 </p>
 
 Abstract: Hydrothermal methods are used for the first time to synthesize distinct crystallographic stoichiometries within the potassium-lutetium-fluoride phase diagram for applications in solid-state laser refrigeration. Four crystalline phases were synthesized hydrothermally and doped with 10% Yb(III) ions, namely, orthorhombic K2LuF5 (space group Pnma), trigonal KLuF4 (space group P3121), orthorhombic KLu2F7 (space group Pna21), and cubic KLu3F10 (space group Fm3̅m), with each phase exhibiting unique microcrystalline morphologies. Among the four phases, the most significant cooling was observed for the KLuF4 phase, which showed an overall refrigeration of 8.6 ± 2.1 K below room temperature. Laser refrigeration for KLuF4 was measured by observing both the eigenfrequencies of optomechanical cantilevers in vacuum and also the Brownian dynamics of optically trapped microcrystals in water. Cooling was also observed for the first time for the K2LuF5 phase in vacuum based on measurements of the mean luminescence wavelength of Yb(III) ions. Cooling was not observed with the other two phases.
